Bug 251604 - Masonry Items being added to Incorrect Row
Summary: Masonry Items being added to Incorrect Row
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brandon
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-02 09:51 PST by Brandon
Modified: 2023-02-02 16:30 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brandon 2023-02-02 09:51:33 PST
Masonry items being added to incorrect row.
Comment 1 Brandon 2023-02-02 09:55:39 PST
Pull request: https://github.com/WebKit/WebKit/pull/9533
Comment 2 EWS 2023-02-02 16:29:58 PST
Committed 259786@main (f63e4c7cf1ab): <https://commits.webkit.org/259786@main>

Reviewed commits have been landed. Closing PR #9533 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-02-02 16:30:19 PST
<rdar://problem/104983053>