Masonry Items being added to Incorrect Row https://bugs.webkit.org/show_bug.cgi?id=251604

Reviewed by Matt Woodrow.

I noticed that itmes were getting added to the second "row" when writing up
some basic examples. This was addressed by removing the extra track sizing step,
which I don't think is needed for Masonry.

Also, forking out the layoutGrid code. I think we should be able to eventually able to delete
this based on some discussions with Matt, but we need it for now due to certain layout operations
being performed here, otherwise the tree ends up at dirty and crashes.

* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutMasonry):
(WebCore::RenderGrid::layoutGridItems):
(WebCore::RenderGrid::layoutMasonryItems):
* Source/WebCore/rendering/RenderGrid.h:

Canonical link: https://commits.webkit.org/259786@main